# AlgoPainter

./: .clang-format  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CudaRasterizer.cpp  CudaRasterizer.h  CudaRasterizerKernels.cu  Fitness.cpp  Fitness.h  FontAnalyzer.cpp  FontAnalyzer.h  GAUtils.cpp  GAUtils.h  Gene.cpp  Gene.h  IRasterizer.cpp  IRasterizer.h  Individual.h  Pixel.h  Rasterizer.cpp  Rasterizer.h  main.cpp
